1. 카테고리 아이콘 교체 (화살표 -> +/-) 2. 카테고리 수정을 위하여 skin.html 인덱스 수정중

--- a/src/style.css
+++ b/src/style.css
@@ -35,12 +35,13 @@
 	z-index: 99; /* Make sure it does not overlap */
 }
 
+/* Icon using at Category, from Font Awesome */
 [data-toggle="collapse"].collapsed .fa:before {   
-  content: "\f139";
+  content: "\f067";
 }
 
 [data-toggle="collapse"] .fa:before {
-  content: "\f13a";
+  content: "\f068";
 }
 
 /* Begin Added By Song @ 20.02.19, for CopyClipBoard */
